--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -42,4 +42,7 @@
     <string name="share_apk">分享 APK</string>
     <string name="install">安装</string>
     <string name="home">主页</string>
+    <string name="error_occurred">出错了</string>
+    <string name="processing_failed">处理失败</string>
+    <string name="back_to_home">返回主页</string>
 </resources>
